bat.bool1.parottrouble.ParotTrouble.scala.error
Compilation error:
ParotTrouble:3: error: ')' expected but '}' found.
  } 
  ^